# s4

./: .gitignore  Makefile  README.md  constraints.txt  pyproject.toml  requirements.txt  train.py
notebooks/: colab.ipynb
src/dataloaders/: lra.py
