[project]
name = "s4"
version = "4.0.1"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "torch (>=2.5.1,<2.5.2)",
    "torchaudio (>=2.5.1,<2.5.2)",
    "torchtext (>=0.18.0,<0.18.1)",
    "torchvision (>=0.20.1,<0.20.2)",
    "scipy (>=1.15.1,<2.0.0)",
    "pandas (>=2.2.2,<2.2.3)",
    "scikit-learn (>=1.6.0,<1.6.1)",
    "matplotlib (>=3.10.0,<3.10.1)",
    "tqdm (>=4.67.1,<5.0.0)",
    "rich (>=13.9.4,<14.0.0)",
    "lit (>=18.1.8,<19.0.0)",
    "pytorch-lightning (>=2.5.0.post0,<3.0.0)",
    "hydra-core (>=1.3.2,<2.0.0)",
    "omegaconf (>=2.3.0,<3.0.0)",
    "wandb (>=0.19.1,<0.19.2)",
    "einops (>=0.8.0,<0.9.0)",
    "cmake (>=3.31.2,<3.31.3)",
    "transformers (>=4.47.1,<4.47.2)",
    "datasets (>=3.2.0,<4.0.0)",
    "sktime (>=0.36.0,<0.37.0)",
    "numba (>=0.61.0,<0.62.0)",
    "gluonts (>=0.16.0,<0.17.0)",
    "timm (>=1.0.14,<2.0.0)",
    "numpy (<2.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = "23.7.0"
coverage = "^7.6.10"
flake8 = "^7.1.1"
isort = "^6.0.0"
flake8-bugbear = "^24.12.12"
flake8-comprehensions = "^3.16.0"
pre-commit = "^4.1.0"
docformatter = "^1.7.5"
