[tool.poetry]
name = "s4"
version = "0.1.0"
description = "Structured State Space Sequence Models"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "*"
lightning = "^2.5.0.post0"
einops = "^0.8.0"
hydra-core = "^1.3.2"
wandb = "^0.19.6"
rich = "^13.9.4"
torchaudio = "^2.6.0"
torchtext = "^0.18.0"
torchvision = "^0.21.0"
pandas = "^2.2.3"
tokenizers = "^0.21.0"
datasets = "^3.2.0"
scikit-learn = "^1.6.1"

[tool.poetry.group.dev.dependencies]
coverage = "*"
flake8 = "*"
isort = "*"
black = "23.7.0"
flake8-bugbear = "*"
flake8-comprehensions = "*"
pre-commit = ">=2.9.3"
docformatter = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
